<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/setting_title"
        layout="@layout/layout_title"/>

    <TextView
        android:id="@+id/usingtime_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/usingtime_text"
        android:layout_below="@id/setting_title"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>
    <RadioGroup
        android:id="@+id/usingtime_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/usingtime_tv"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp">
        <RadioButton
            android:id="@+id/rb_0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/usingtime_radio_0"/>
        <RadioButton
            android:id="@+id/rb_15min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/usingtime_radio_15"/>
        <RadioButton
            android:id="@+id/rb_20min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/usingtime_radio_20"/>
        <RadioButton
            android:id="@+id/rb_30min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/usingtime_radio_30"/>
        <RadioButton
            android:id="@+id/rb_45min"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/usingtime_radio_45"/>
    </RadioGroup>

    <TextView
        android:id="@+id/playmode_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/playmode_text"
        android:layout_below="@id/usingtime_rg"
        android:textSize="16sp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>
    <RadioGroup
        android:id="@+id/playmode_rg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/playmode_tv"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp">
        <RadioButton
            android:id="@+id/rb_vedio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/playmode_vedio"/>
        <RadioButton
            android:id="@+id/rb_audio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/playmode_audio"/>
    </RadioGroup>

</RelativeLayout>